# GP1

./: .clangd  .gitattributes  .gitignore  README.md  diff.txt  session.rdbg
CHPT2/: Actor.cpp  Actor.h  CHPT2.cpp  CHPT2.vcxproj  CHPT2.vcxproj.filters  Component.cpp  Component.h  Game.cpp  Game.h  Math.h  SpriteComponent.h
CHPT2DOD/: Actor.h  CHPT2DOD.cpp  CHPT2DOD.vcxproj  CHPT2DOD.vcxproj.filters  Components.h  Game.cpp  Game.h  Math.cpp  Math.h  Sprite.h
CHPT3/: CHPT3.cpp  CHPT3.vcxproj  CHPT3.vcxproj.filters
CHPT3 OOP/: CHPT3.cpp  CHPT3.sln
CHPT4 OOP/: AnimSpriteComponent.cpp  Asteroid.cpp  CHPT3.vcxproj  CHPT3.vcxproj.filters  CircleComponent.cpp  Game.cpp  MoveComponent.cpp  Vector2.h
CHPT5 OpenGL/: AIState.cpp  Actor.h  AnimSpriteComponent.cpp  Asteroid.cpp  BGSpriteComponent.cpp  BGSpriteComponent.h  CHPT5 OpenGL.sln  CHPT5 OpenGL.vcxproj  Game.cpp  Game.h  Math.cpp  Math.h  MoveComponent.cpp  Shader.cpp  Shader.h  Ship.cpp  SpriteComponent.cpp  SpriteComponent.h  VertexArray.cpp  VertexArray.h
CHPT6/: AnimSpriteComponent.h  Asteroid.cpp  CHPT6.sln  CHPT6.vcxproj  CircleComponent.h  Game.h  Laser.cpp  Math.cpp  MoveComponent.h  Ship.h  (+1 more)
CHPT6 3D Graphics OOP/: CHPT6 3D Graphics OOP.sln  CHPT6 3D Graphics OOP.vcxproj  CHPT6 3D Graphics OOP.vcxproj.filters  Laser.h
Chapter 6 ECS/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  Components.h  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  Math.cpp  Math.h  Renderer.cpp  Renderer.h  Rendering.cpp  Rendering.h  Systems.cpp
Chapter 6 ECS/Assets/: character-human.glb  scene.json
GP1/: GP1.cpp  (+6 more)
(+183 files in other folders)
